Fixed spacing issues

--- a/stylez/main.css
+++ b/stylez/main.css
@@ -42,6 +42,7 @@ h1 {
 #header {
     /* magic number to make things look even */
     padding-bottom: 5.4333px;
+    height: 180px;
 }
 
 ul ul {
